--- a/.github/workflows/Java-android.yml
+++ b/.github/workflows/Java-android.yml
@@ -29,7 +29,7 @@ jobs:
               cashe: gradle
       - name: Run unit tests
         run: |
-              gradle
+              gradle init
               gradle tasks
               #gradle wrapper --gradle-version 7.4.2
               chmod +x gradlew
