--- a/.github/workflows/Java-android.yml
+++ b/.github/workflows/Java-android.yml
@@ -31,8 +31,10 @@ jobs:
         run: |
               gradle init
               gradle tasks
-              #gradle wrapper --gradle-version 7.4.2
               chmod +x gradlew
+              ./gradlew run
+              #gradle wrapper --gradle-version 7.4.2
+              # chmod +x gradlew
               #chmod +x test
               #./gradlew tasks --all
               #cd /home/runner/work/C-android/C-android/
