--- a/.github/workflows/Java-android.yml
+++ b/.github/workflows/Java-android.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Run unit tests
         run: |
               gradle init
+              gradle wrapper
               gradle tasks --all
               chmod +x gradlew
               ./gradlew run
