--- a/.github/workflows/Java-android.yml
+++ b/.github/workflows/Java-android.yml
@@ -34,6 +34,8 @@ jobs:
               gradle build
               gradle tasks --all
               chmod +x gradlew
+              cd /home/runner/work/C-android/C-android/initial
+              pwd
               ./gradlew run
               #gradle wrapper --gradle-version 7.4.2
               # chmod +x gradlew
