--- a/.github/workflows/Java-android.yml
+++ b/.github/workflows/Java-android.yml
@@ -18,5 +18,5 @@ jobs:
     
     - name: Execute Gradle build
       run: |
-           chmod +x gradlew
+           pwd
            ./gradlew build
