--- a/.github/workflows/Java-android.yml
+++ b/.github/workflows/Java-android.yml
@@ -18,5 +18,7 @@ jobs:
     
     - name: Execute Gradle build
       run: |
+           cd /home/runner/work/Java-android/Java-android/complete
            pwd
+           ls -l
            ./gradlew build
