--- a/.github/workflows/Java-android.yml
+++ b/.github/workflows/Java-android.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Execute Gradle build
       run: |
            cd /home/runner/work/Java-android/Java-android/complete
+           complete
            pwd
            ls -l
            chmod +x gradlew
