--- a/.github/workflows/Java-android.yml
+++ b/.github/workflows/Java-android.yml
@@ -1,73 +1,29 @@
-name: Run Gradle on PRs
-on: push
-jobs:
-  gradle:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 11
-        
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-         
-    - name: Execute Gradle build
-      run: | 
-           cd /home/runner/work/Java-android/Java-android/complete/build/distributions/complete/bin
-           chmod +x complete
-           ./complete
-           cd /home/runner/work/Java-android/Java-android/complete
-           pwd
-           ls -l
-           chmod +x gradlew
-           ./gradlew build
-           ls -l
-           ./gradlew run
-    - name: apk
-      uses: actions/setup-java@v1
-      with: {java-version: 1.8}
-    - name: Build release APK and AAB after test
-      run: |
-           gradle init
-           chmod +x gradlew  
-           # ./gradlew test
-           ./gradlew assembleRelease
-           ./gradlew bundleRelease  
-          
-          
-    - name: Archive site content
-      uses: thedoctor0/zip-release@master
-      with:
-            filename: test.zip     
-            exclusions: ' *.cpp / *.c /*.yml  / .git'  
-               
-    - name: Create new release
-      id: create-new-release
-      uses: actions/create-release@latest
-      env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          body: |
-                run_number
-          draft: false
-          prerelease: false     
+name: Build & Publish Release APK
 
-    - name: Upload release asset
-      uses: actions/upload-release-asset@v1
+on:
+  push:
+    tags:
+      - '*'
+
+jobs:
+  Gradle:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout code
+      uses: actions/checkout@v2
+    - name: setup jdk
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Make Gradle executable
+      run: chmod +x ./gradlew
+    - name: Build Release APK
+      run: ./gradlew assembleRelease
+    - name: Releasing using Hub
+      uses: kyze8439690/action-release-releaseapk@master
       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:  
-       upload_url:   ${{ steps.create-new-release.outputs.upload_url }}
-       asset_path: ./test.zip
-       asset_name: test-v${{ github.run_number }}.zip
-       asset_content_type: application/zip
+       GITHUB_TOKEN: ${{ secrets.TOKEN }}
+       APP_FOLDER: app
     
 
 
