--- a/.github/workflows/Java-android.yml
+++ b/.github/workflows/Java-android.yml
@@ -1,9 +1,11 @@
 name: Build & Publish Release APK
 
-on:
-  push:
-    tags:
-      - '*'
+on: 
+  push: 
+    branches: [ main ] 
+  pull_request: 
+    branches: [ main ]
+
 
 jobs:
   Gradle:
